deployment/base/tools/qrding-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qrding
  namespace: tools
spec:
  selector:
    app: qrding
  ports:
    - port: 3000
      targetPort: 3000
