deployment/base/tools/it-tools-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: it-tools
  namespace: tools
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`tools.hauptspeicher.com`)
      kind: Rule
      services:
        - name: it-tools
          port: 80
  tls:
    certResolver: myresolver
