deployment/base/tools/qrding-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: qrding
  namespace: tools
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`qr.hauptspeicher.com`)
      kind: Rule
      services:
        - name: qrding
          port: 3000
  tls:
    certResolver: myresolver
